examples/test/testpolicy14263.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14263
  namespace: namespace196
spec:
  podSelector:
    matchLabels:
      key28: value5
      key31: value3
      key24: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value24
          key35: value42
      podSelector:
        matchLabels:
          key47: value23
